--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -98,10 +98,10 @@
     opacity: 0;
   }
   .fade-enter-active {
-    transition: all 0.3s linear;
+    transition: all .4s linear;
   }
   .fade-leave-active {
-    transition: all 0.3s linear;
+    transition: all .4s linear;
     opacity: 0;
     position: absolute;
   }
